--- a/login.html
+++ b/login.html
@@ -4,17 +4,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>서울특별시 건축주택종합정보시스템</title>
-    <meta name="title" content="서울특별시 건축주택종합정보시스템"/>
+    <title>현장조사 모바일 앱</title>
+    <meta name="title" content="현장조사 모바일 앱"/>
     <meta name="author" content=""/>
     <meta name="keywords" content=""/>    
-    <link rel="shortcut icon" href="assets/images/favicon.ico">
 
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/font.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/common.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+  
+    <link href="assets/css/login.css" rel="stylesheet" type="text/css" />
 
     <script src="assets/js/jquery.min.js"></script>
 </head>
@@ -30,8 +29,6 @@
 	            </div>
 	            <div class="form-group pw">
 	                <input type="password" value="wgsystem" class="form-control form-control-lg" placeholder="비밀번호 입력"><!-- 틀렸을경우 .invalid 추가 -->
-	                <!-- <div class="ment text-danger">아이디 및 비밀번호를 입력해 주세요.</div>
-	                <div class="ment text-danger">아이디 또는 비밀번호가 정확하지 않습니다.</div> -->
 	            </div>
 	            <div class="findid">
 		            <div class="custom-control custom-checkbox">
@@ -40,7 +37,7 @@
 		            </div>            
 		        </div>
 		        <button type="button" class="btn btn-primary btn-block btn-rounded btn-lg" onclick="location.href='index.html'">로그인</button>
-		        <button type="button" class="btn btn-light btn-block btn-rounded btn-lg" onclick="location.href='회원가입.html'">회원가입</button>
+		        <button type="button" class="btn btn-light btn-block btn-rounded btn-lg" onclick="location.href='#'">회원가입</button>
 			</div>
 		</div>
 	</div>
