feat : features 추가 시 특정 경로에 geojson export

--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
             <li><a href="#">구조화성과</a></li>
           </ul>
           <ol>
-            <li><a href="#">레이어 1</a></li>
-            <li><a href="#">레이어 2</a></li>
-            <li><a href="#">레이어 3</a></li>
+            <li><input id="layer1ListCheck" type="checkbox" onchange="layerVisble(this)" checked/>
+              <a id="layer1List"></a></li>
           </ol>
         </div>
       </div>
