--- a/android/app/src/main/assets/index.html
+++ b/android/app/src/main/assets/index.html
@@ -30,7 +30,7 @@
     <script src="assets/js/slick.min.js"></script>
     <script src="assets/js/aos.js"></script>
     <script src="assets/js/ol.js"></script>
-    <script src="node_modules/shpjs/dist/shp.js"></script>
+    <!-- <script src="node_modules/shpjs/dist/shp.js"></script> -->
     <script src="assets/js/proj4.js"></script>
 
   </head>
@@ -79,7 +79,7 @@ ol.proj.proj4.register(proj4)
         <div class="bigdata-trend">
           <div class="row">
             <div class="left">
-              <button id="cameraButton">Click me</button>
+              <button onclick="sendMessageToReactNative()">test</button>
               <a type="button" id="layerSearch" onclick="statChange(this)" class="btn btn-rounded changeItem active" style="cursor: pointer;">주소 검색</a>
               <a type="button" id="layerList" onclick="statChange(this)" class="btn btn-rounded changeItem" style="cursor: pointer;">레이어 목록</a>
             </div>
