--- a/android/app/src/main/assets/index.html
+++ b/android/app/src/main/assets/index.html
@@ -30,7 +30,7 @@
     <script src="assets/js/slick.min.js"></script>
     <script src="assets/js/aos.js"></script>
     <script src="assets/js/ol.js"></script>
-    <!-- <script src="node_modules/shpjs/dist/shp.js"></script> -->
+    <script src="node_modules/shpjs/dist/shp.js"></script>
     <script src="assets/js/proj4.js"></script>
 
   </head>
@@ -106,7 +106,7 @@ ol.proj.proj4.register(proj4)
           <ol>
             <li><input id="layer1ListCheck" type="checkbox" onchange="layerVisble(this)" value="suveyLayer" checked/>
               <a id="layer1List">현장조사정보</a></li>
-          </ol>a
+          </ol>
           <ol>
             <li><input id="layer2ListCheck" type="checkbox" onchange="layerVisble(this)" value="N3P_F0020000" checked/>
               <a id="layer2List">N3P_F0020000</a></li>
@@ -121,6 +121,9 @@ ol.proj.proj4.register(proj4)
       </div>
       <div id="update-overlay">
       </div>
+        <!-- 센서 데이터를 표시할 엘리먼트 -->
+  <div id="sensor-data" style="position: absolute; top: 10px; left: 10px; background-color: rgba(255, 255, 255, 0.8); padding: 10px;"></div>
+
       <label class="switch">
         <input id="drawSwitch" type="checkbox" />
         <span class="slider round"></span>
