fix : shp 파일 레이어 추가되지 않는 현상 및 api 34 대응 가능하도록 수정

--- a/android/app/src/main/assets/index.html
+++ b/android/app/src/main/assets/index.html
@@ -102,11 +102,11 @@ ol.proj.proj4.register(proj4)
         </div>
         <div class="gnb statItem" id="layerListData"  style="display: none;">
           <ol>
-            <li><input id="layer1ListCheck" type="checkbox" onchange="layerVisble(this)" value="suveyLayer" checked/>
-              <a id="layer1List">현장조사정보</a></li>
+            <li><input type="checkbox" onchange="layerVisible('suveyLayer')" value="suveyLayer" checked/>
+              <a>현장조사정보</a></li>
           </ol>
           <!-- <ol>
-            <li><input id="layer2ListCheck" type="checkbox" onchange="layerVisble(this)" value="N3P_F0020000" checked/>
+            <li><input id="layer2ListCheck" type="checkbox" onchange="layerVisible(this)" value="N3P_F0020000" checked/>
               <a id="layer2List">N3P_F0020000</a></li>
           </ol> -->
         </div>
