fix : 실행 시 무한 로딩 현상 수정

--- a/android/app/src/main/assets/index.html
+++ b/android/app/src/main/assets/index.html
@@ -111,6 +111,10 @@
             <li><input id="layer2ListCheck" type="checkbox" onchange="layerVisible(this)" value="N3P_F0020000" checked/>
               <a id="layer2List">N3P_F0020000</a></li>
           </ol> -->
+          <div class="loading-overlay" id="loadingOverlay">
+            <!-- <div class="loading-spinner"></div> -->
+            <p>레이어 목록 로딩 중...</p>
+          </div>
       </div>
     </div>
     <div class="nav-overlay"></div>
