--- a/android/app/src/main/assets/index.html
+++ b/android/app/src/main/assets/index.html
@@ -41,7 +41,7 @@
     <div class="header">
       <div class="container">
         <div class="logo">
-          <a href="/" style="width: 177px;height: 47px;background-size: contain;margin-top: 20px;">
+          <a href="/" style="width: 80px;height: 47px;background-size: contain;margin-top: 20px;">
             <h1 class="skip">현장조사프로그램</h1>
           </a>
         </div>
@@ -77,6 +77,7 @@
       </div>
       <div class="bigdata-trend">
         <div class="row">
+          <a style="cursor: pointer;padding: 0.65rem 0.5rem;background-color: #0576b6;color: white;margin-bottom: 10px;width: 100%;text-align: center;" class="btn-rounded " id="download" onclick="shpDownload()" type="button" download="현장조사정보.geojson">현장조사 정보 다운로드</a>
           <div class="left">
             <a type="button" id="layerSearch" onclick="statChange(this)" class="btn btn-rounded changeItem active"
               style="cursor: pointer;">주소 검색</a>
