--- a/android/app/src/main/assets/login.html
+++ b/android/app/src/main/assets/login.html
@@ -22,7 +22,10 @@
 	<div class="login">
 		<div class="wrap">
 			<form class="form-area">
-				<div class="logo">현장조사 모바일 앱</div>
+				<div class="logo">
+					<a href="/" style="width: 80px;height: 47px;background-size: contain;margin-top: 20px;">
+					</a>
+				  </div>
 				<div class="tit">로그인</div>
 				<div class="form-group id">
 	                <input type="text" value="admin" class="form-control form-control-lg" placeholder="아이디 입력">	                
@@ -36,7 +39,7 @@
 		                <label class="custom-control-label" for="check1">아이디 저장</label>
 		            </div>            
 		        </div>
-		        <button type="button" class="btn btn-primary btn-block btn-rounded btn-lg" onclick="location.href='index.html'">로그인</button>
+		        <button type="button" style="background-color: #0561b6" class="btn btn-primary btn-block btn-rounded btn-lg" onclick="location.href='index.html'">로그인</button>
 		        <button type="button" class="btn btn-light btn-block btn-rounded btn-lg" onclick="location.href='#'">회원가입</button>
 			</div>
 		</div>
