fix : 로고 변경 및 배경지도 선택 추가

--- a/android/app/src/main/assets/login.html
+++ b/android/app/src/main/assets/login.html
@@ -26,6 +26,10 @@
 					<a href="/" style="width: 80px;height: 47px;background-size: contain;margin-top: 20px;">
 					</a>
 				  </div>
+				  <div class="logo_2">
+					<a href="/" style="width: 80px;height: 47px;background-size: contain;margin-top: 20px;">
+					</a>
+				  </div>
 				<div class="tit">로그인</div>
 				<div class="form-group id">
 	                <input type="text" value="admin" class="form-control form-control-lg" placeholder="아이디 입력">	                
@@ -36,11 +40,11 @@
 	            <div class="findid">
 		            <div class="custom-control custom-checkbox">
 		                <input type="checkbox" id="check1" class="custom-control-input">
-		                <label class="custom-control-label" for="check1">아이디 저장</label>
+		                <!-- <label class="custom-control-label" for="check1">아이디 저장</label> -->
 		            </div>            
 		        </div>
 		        <button type="button" style="background-color: #0561b6" class="btn btn-primary btn-block btn-rounded btn-lg" onclick="location.href='index.html'">로그인</button>
-		        <button type="button" class="btn btn-light btn-block btn-rounded btn-lg" onclick="location.href='#'">회원가입</button>
+		        <!-- <button type="button" class="btn btn-light btn-block btn-rounded btn-lg" onclick="location.href='#'">회원가입</button> -->
 			</div>
 		</div>
 	</div>
