--- a/android/app/src/main/assets/index.html
+++ b/android/app/src/main/assets/index.html
@@ -40,11 +40,14 @@
   <header>
     <div class="header">
       <div class="container">
-        <div class="logo">
-          <a href="/" style="width: 80px;height: 47px;background-size: contain;margin-top: 20px;">
+        <span class="logo">
+          <a style="width: 80px;height: 47px;background-size: contain; margin-top: 20px;">
             <h1 class="skip">현장조사프로그램</h1>
           </a>
-        </div>
+          <a class="logo_2" style="width: 130px;height: 47px;">
+            <h1 class="skip">현장조사프로그램</h1>
+          </a>
+        </span>
         <div class="utility">
           <!-- 로그인 하면 보여지는 부분 -->
           <div class="dropdown">
@@ -71,7 +74,7 @@
           </div>
           <ul>
             <li>환영합니다!</li>
-            <li>test 1님</li>
+            <li>admin 님</li>
           </ul>
         </a>
       </div>
@@ -117,7 +120,6 @@
               <a id="layer2List">N3P_F0020000</a></li>
           </ol> -->
         <div class="loading-overlay" id="loadingOverlay">
-          <!-- <div class="loading-spinner"></div> -->
           <p>레이어 목록 로딩 중...</p>
         </div>
       </div>
@@ -132,25 +134,15 @@
     </div>
     <div id="select-overlay">
     </div>
+    <button class="base-button active" id="base-btn" onclick="onBaseEvt()">배경지도</button>
+    <button class="base-button" id="satellite-btn" onclick="onSatelliteEvt()">영상지도</button>
+
     <!-- 센서 데이터를 표시할 엘리먼트 -->
     <div id="sensor-data"
       style="z-index: -1; position: absolute; top: 10px; left: 10px; background-color: rgba(255, 255, 255, 0.8); padding: 10px;">
     </div>    
     <button class="loaction-button" onclick="moveMyLocation()"></button>
     <button id="interaction-button" onclick="onInteractionEvt(this)"></button>
-    
-    
-    <!-- <label class="switch" style="right: 10px;">
-      <input id="drawSwitch" type="checkbox" />
-      <span class="slider round"></span>
-      <span style="
-position: absolute;
-    top: 40px;
-    font-size: 11px;
-    right: 0px;
-">조사정보입력</span>
-    </label> -->
-
 
   </div>
   <a class="scrollup" title="가장위로"></a>
